# 4DPADCurvAnalysis

./: .gitignore  CMakeLists.txt  Readme.md  faceConfig.json  faceConfigOpt.json  main.cpp  matplotlibcpp.h  rs_frame_image.h  stb_easy_font.h  visualization.hpp
CMakeModules/: FindLIBIGL.cmake
results/: results.txt
